--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --port 3002",
     "build": "vite build",
     "preview": "vite preview",
     "ws": "node ./server/ws-relay.mjs",
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "concurrently": "^9.0.1",
-    "express": "^4.21.0",
     "vite": "^5.4.4",
     "websocket": "^1.0.34",
     "ws": "^8.18.0"
