--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vite build",
     "preview": "vite preview",
     "ws": "node ./server/ws-relay.mjs",
+    "server": "nodemon --ext mjs node ./server/server.mjs",
     "start": "concurrently \"npm run dev\" \"npm run ws\""
   },
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "concurrently": "^9.0.1",
+    "nodemon": "^3.1.9",
     "vite": "^5.4.4",
     "websocket": "^1.0.34",
     "ws": "^8.18.0"
