Make browser WebSocket code universal and bring into a demo node app
Now we can use AppStoreDistributed in Node!

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview",
     "ws": "node ./server/ws-relay.mjs",
     "server": "nodemon --ext mjs node ./server/server.mjs",
+    "node-app-demo": "nodemon --ext mjs node ./node-app-demo/index.mjs",
     "start": "concurrently \"npm run dev\" \"npm run ws\""
   },
   "devDependencies": {
