--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "ws": "node ./server/ws-relay.mjs --port 3001",
-    "server": "nodemon --ext mjs node ./server/server.mjs --port 3001 --portHttp 3003",
+    "server": "nodemon --watch ./server --ext mjs node ./server/server.mjs --port 3001 --portHttp 3003",
     "start": "concurrently \"npm run dev\" \"npm run server\"",
-    "node-app-demo": "nodemon --ext mjs node ./node-app-demo/index.mjs --server 127.0.0.1:3001/ws"
+    "node-app-demo": "nodemon --watch ./node-app-demo --ext mjs node ./node-app-demo/index.mjs --server 127.0.0.1:3001/ws"
   },
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.1.0",
