--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "ws": "node ./server/ws-relay.mjs --port 3001",
     "server": "nodemon --watch ./server --ext mjs node ./server/server.mjs --port 3001 --portHttp 3003",
     "start": "concurrently \"npm run dev\" \"npm run server\"",
-    "node-app-demo": "nodemon --watch ./client-demos/nodejs/node-app-demo --ext mjs node ./client-demos/nodejs/node-app-demo/index.mjs --server 127.0.0.1:3001/ws"
+    "node-app-demo": "nodemon --watch ./client-demos/nodejs/node-app-demo --ext mjs node ./client-demos/nodejs/node-app-demo/index.mjs --server 127.0.0.1:3001/ws --portHttp 3003"
   },
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "concurrently": "^9.0.1",
+    "http-proxy": "^1.18.1",
     "nodemon": "^3.1.9",
     "vite": "^5.4.4",
     "websocket": "^1.0.34",
