--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^9.0.1",
     "http-proxy": "^1.18.1",
     "nodemon": "^3.1.9",
+    "notyf": "^3.10.0",
     "vite": "^6.0.11",
     "websocket": "^1.0.34",
     "ws": "^8.18.0"
