--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "concurrently": "^9.0.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "http-proxy": "^1.18.1",
     "nodemon": "^3.1.9",
     "notyf": "^3.10.0",
