--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "dev": "vite --host --port 3002",
+    "prebuild": "npm install @rollup/rollup-linux-x64-gnu --no-save || true",
     "build": "vite build",
     "build_skip": "echo 'Skipping build on Heroku'",
     "preview": "vite preview",
