Custom `npm run preview` command to build /dist and then run only server, like it would on prod

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prebuild": "npm install @rollup/rollup-linux-x64-gnu --no-save || true",
     "build": "vite build",
     "build_skip": "echo 'Skipping build on Heroku'",
-    "preview": "vite preview",
+    "vite-preview": "vite preview",
+    "preview": "npm run build && npm run server",
     "ws": "node ./server/ws-relay.mjs --port 3001",
     "server": "nodemon --watch ./server --ext mjs node ./server/server.mjs --portHttp 3003",
     "start-alt": "nodemon --watch ./server --ext mjs node ./server-alt.mjs --port 3002 --portHttp 3003",
