--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "vite": "vite --host --port 3002",
     "dev": "concurrently \"npm run vite\" \"npm run server\"",
     "prebuild": "npm install @rollup/rollup-linux-x64-gnu --no-save || true",
+    "server": "nodemon --watch ./server --ext mjs node ./server/server.mjs --portHttp 3003",
     "build": "vite build",
     "build_skip": "echo 'Skipping build on Heroku'",
     "vite-preview": "vite preview",
     "preview": "npm run build && npm run server",
-    "ws": "node ./server/ws-relay.mjs --port 3001",
-    "server": "nodemon --watch ./server --ext mjs node ./server/server.mjs --portHttp 3003",
+    "start": "node ./server/server.mjs",
     "start-alt": "nodemon --watch ./server --ext mjs node ./server-alt.mjs --port 3002 --portHttp 3003",
+    "ws": "node ./server/ws-relay.mjs --port 3001",
     "server-debug": "nodemon --watch ./server --ext mjs node ./server/server.mjs --port 3001 --portHttp 3003 --debug",
     "node-app-demo": "nodemon --watch ./client-demos/nodejs/node-app-demo --ext mjs node ./client-demos/nodejs/node-app-demo/index.mjs --server 127.0.0.1:3001/ws --portHttp 3003",
     "launch-chrome": "node ./scripts/run-chrome.mjs --url http://localhost:3002 --location 500,100 --fullscreen true --screen-num 1"
