--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=22.0.0"
   },
   "scripts": {
     "vite": "vite --host --port 3002",
@@ -15,9 +15,10 @@
     "vite-preview": "vite preview",
     "preview": "npm run build && npm run server",
     "start": "node ./server.mjs",
-    "ws": "node ./server/ws-relay.mjs --port 3001",
-    "server-debug": "nodemon --watch ./src/server --ext mjs node ./server.mjs --port 3001 --portHttp 3003 --debug",
-    "node-app-demo": "nodemon --watch ./examples/app-store/nodejs/node-app-demo --ext mjs node ./examples/app-store/nodejs/node-app-demo/index.mjs --server 127.0.0.1:3001/ws --portHttp 3003",
+    "ws": "node ./server/ws-relay.mjs --port 3003",
+    "server-debug": "nodemon --watch ./src/server --ext mjs node ./server.mjs --port 3003 --portHttp 3003 --debug",
+    "node-app-store-demo": "nodemon --watch ./examples/app-store/nodejs/node-app-demo --ext mjs node ./examples/app-store/nodejs/node-app-demo/index.mjs --server ws://127.0.0.1:3003/ws --portHttp 3003",
+    "node-dashboard-demo": "nodemon --watch ./examples/dashboard/js-backend --ext mjs node ./examples/dashboard/js-backend/index.mjs --server ws://127.0.0.1:3003/ws",
     "launch-chrome": "node ./scripts/run-chrome.mjs --url http://localhost:3002 --location 500,100 --fullscreen true --screen-num 1"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "http-proxy": "^1.18.1",
     "nodemon": "^3.1.9",
     "notyf": "^3.10.0",
+    "screenshot-desktop": "^1.15.1",
     "vite": "^6.3.2",
     "websocket": "^1.0.34",
     "ws": "^8.18.1"
