--- a/examples/dashboard/desktop-electron/.env.example
+++ b/examples/dashboard/desktop-electron/.env.example
@@ -1,6 +1,7 @@
-app_id=app_id-from-env
-app_title=app_title-from-env
+app_id=desktop-app-id
+app_title=Desktop Dashboard Poster
 api_url=http://localhost:3003/api/dashboard
-post_interval=2
-webcam_interval=5
-webcam_index=1
+post_interval=10
+webcam_interval=10
+webcam_index=0
+capture_active=true
