--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "oversite": "github:Hovercraft-Studio/oversite#main",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
